--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,14 @@
-<p>Hello <%= @resource.email %>!</p>
+<p><%= @resource.username %>様</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>パスワードの申請を受け付けました。</p>
+<p>以下のURLよりパスワードリセットの手続きを行ってください。</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p>URL : <%= link_to 'Change my password', edit_user_password_url(@resource, reset_password_token: @token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+
+<p>リクエストしていない場合は、このメールを無視してください。</p>
+<p>上記のリンクにアクセスして新しいパスワードを作成するまでは、パスワードは変更されません</p>
+
+<p> </p>
+<p>本メールは送信専用です。</p>
+<p>ご返信頂きましても対応致しかねますのでご了承くださいませ。</p>
